objects/KYC_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC Logs</relationshipLabel>
        <relationshipName>KYC_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KYC Logs</relationshipLabel>
        <relationshipName>KYC_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Initiated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KYC_Callout_results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC Callout results</label>
        <referenceTo>KYC_Callout_results__c</referenceTo>
        <relationshipLabel>KYC Logs</relationshipLabel>
        <relationshipName>KYC_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KYC Logs</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Logs	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>